fashion_store.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fashion-store

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fashion-store
  namespace: fashion-store
spec:
  replicas: 1

  selector:
    matchLabels:
      app: fashion-store

  template:
    metadata:
      labels:
        app: fashion-store

    spec:
      containers:
        - name: fashion-store
          image: localhost/fashion-store:0.6
          imagePullPolicy: Never

          ports:
            - name: http
              containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health/ready/
              port: 8000
              httpHeaders:
                - name: Host
                  value: localhost
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health/live/
              port: 8000
              httpHeaders:
                - name: Host
                  value: localhost
            initialDelaySeconds: 15
            periodSeconds: 10

          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 384Mi

---
apiVersion: v1
kind: Service
metadata:
  name: fashion-store
  namespace: fashion-store
spec:
  selector:
    app: fashion-store

  ports:
    - name: http
      port: 80
      targetPort: 8000

  type: ClusterIP
