fashion-store-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fashion-store
  namespace: fashion-store
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fashion-store
                port:
                  number: 80
